# genshin-elemental-hud

./: Cargo.toml  README.md  data.yaml  party.yaml
src/: arc.rs  cooldown.rs  loading.rs  main.rs
