[package]
name = "estatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe="0.17.0"
egui_extras = {version="*", features=["image"]}
image = {version = "*", features = ["png"]}
device_query="1.1.0"
lyon_geom="*"
serde="*"
serde_yaml="*"
serde_derive="*"